Fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,10 @@ table {
   border-collapse: collapse;
 }
 
+.logo {
+  max-width: 200px;
+}
+
 .search {
   max-width: 20px;
 }
@@ -23,7 +27,11 @@ table {
 .back {
   background-color: #efefef;
 }
+
 @media only screen and (min-width: 60em) {
 
+  .table-wrapper {
+    overflow: hidden;
+  }
 
 }
